feat: boolean 인수에 따라서 flex-direction 변경 기능 추가

--- a/drag_order2.html
+++ b/drag_order2.html
@@ -10,8 +10,9 @@
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-    <script src="drag_order.js"></script>   
-
+    <!-- drag_order jquery 버젼 -->
+    <script src="drag_order_jquery.js"></script>
+    
 </head>
 <body>
     <div>
