--- a/dragOrder.html
+++ b/dragOrder.html
@@ -31,8 +31,12 @@
         </div>
     </div>
 </body>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="drag_order.js"></script>
+
+    <!-- drag_order jquery 버젼 -->
+    <script src="drag_order_jquery.js"></script>
+
     <script>
         new DragOrder("#dragList");
     </script>
