--- a/drag_order.html
+++ b/drag_order.html
@@ -8,11 +8,11 @@
     
     <link rel="stylesheet" type="text/css" href="drag_order.css">
     
-    <!-- drag_order jquery 버젼 -->
+    <!-- drag_order jquery 버전 -->
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
     <!-- <script src="drag_order_jquery.js"></script> -->
 
-    <!-- drag_order vanilla JS 버젼 -->
+    <!-- drag_order vanilla JS 버전 -->
     <script src="drag_order_vanilla.js"></script>
 
 </head>
